<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.44"
        tools:viewBindingIgnore="true" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/middle_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaa" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintStart_toEndOf="@id/middle_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps_placeholder"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Repetições 15-12-10" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/series_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series_placeholder"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/reps" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_placeholder"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/reps" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/icon_info"
        app:iconSize="20sp"
        app:iconTint="?attr/colorOnBackground"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/name" />


</androidx.constraintlayout.widget.ConstraintLayout>